# kudb-python

./: .gitignore  AGENTS.md  Makefile  README.md  mkdoc.py  publish_test.sh  pyproject.toml  requirements-dev.txt  requirements.txt  sample-basic.py  sample-find.py  sample-kvs.py  sample-set-keys-from-dict.py  sample-update.py  sample_doc.py  sample_kvs.py  setup.py  test_all.sh  test_doc.py  test_kvs.py  update_version.py
docs/: README_ja.md  dev.md  functions.md
kudb/: __init__.py  kudb.py  py.typed
test/: simple.py
tests/: __init__.py  test_doc.py  test_set_keys_from_dict.py
